fix: prevent double tap zoom on iOS

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -26,6 +26,8 @@ $breakpoint-mobile: (
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
+  // Disable double tap zoom on touch devices
+  touch-action: manipulation;
 }
 
 html,
